# DigitalCoach

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: playwright.yml  tests.yml
digital-coach-app/: .env.example  .gitignore  Dockerfile  README.md  dump.rdb  firebase.json  next.config.js  package-lock.json  package.json  tsconfig.json  typedoc.json
mlapi/: .dockerignore  .env.example  Dockerfile  Pipfile  main.py  pyproject.toml  requirements.txt
mlapi/data/: interviews.py  users.py
mlapi/redisStore/: monitor.py  myconnection.py  queue.py  redis_queue.py  worker.py
mlapi/routes/: assemblyai.py  audio_analysis.py  big_five.py  create_answer.py  facial_analysis.py  heygen.py  interview.py  jobs.py  llm.py  star_feedback.py  user.py
mlapi/schemas/: __init__.py  audio.py  create_answer.py  evaluation.py  feedback.py  heygen.py  interview.py  jobs.py  user.py
mlapi/services/: jobs.py  orchestrator.py
mlapi/tasks/: __init__.py  assemblyai_api.py  assemblyai_api_transcript.py  audio_analysis.py  bigfivescore.py  create_answer_task.py  feedback.py  filler_hedge_analysis.py  ml_tasks.py  prompts.py  seed.py  starscores.py
mlapi/tasks/helpers/: competency_feedback.py  create_answer_helpers.py  filler_hedge_counter.py
mlapi/tests/: conftest  test_assemblyai_transcript.py  test_audio_analysis.py  test_big_five.py  test_create_answer.py  test_star_feedback.py
mlapi/tests_old/: test_create_answer.py  test_star_feedback.py
mlapi/utils/: transcript.py
tests/: auth-test.spec.ts  interview.spec.ts
(+59 files in other folders)
