[project]
name = "mlapi"
version = "0.1.0"
description = "Digital Coach's Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "assemblyai>=0.40.2",
    "fastapi>=0.115.12",
    "redis>=5.2.1",
    "rq>=2.3.2",
    "firebase-admin>=7.1.0",
    "openai>=2.29.0",
    "rq-dashboard-fast>=0.8.1",
    "cloudinary>=1.44.1",
    "dotenv>=0.9.9",
]
